Fix image id empty string in tweakpane image input generator, fix pointer events behind the tweakpane container

--- a/plugins/tweakpane/src/tpTheme.css
+++ b/plugins/tweakpane/src/tpTheme.css
@@ -2,6 +2,10 @@
     /*padding-right: 0.25rem;*/
     height: calc(100% - 6rem);
     max-height: calc(100% - 6rem);
+    pointer-events: none;
+}
+#tweakpaneUiContainer > div{
+    pointer-events: auto;
 }
 
 :root {
